--- a/JournalApp2.0/Views/Windows/DomashkaWindow.xaml
+++ b/JournalApp2.0/Views/Windows/DomashkaWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:JournalApp2._0.Views.Windows"
         xmlns:vm ="clr-namespace:JournalApp2._0.ViewModels"
+        xmlns:cmd ="clr-namespace:JournalApp2._0.Infrastructure.Commands"
         mc:Ignorable="d"
         Title="DomashkaWindow" Height="450" Width="800">
     <Window.DataContext>
@@ -28,7 +29,12 @@
             <TextBox x:Name="TextBoxG" Text="{Binding G, UpdateSourceTrigger=PropertyChanged}"/>
             <Label Content="Площадь:"/>
             <Label Content="{Binding S}"/>
-            <Button Content="Click" Command="{Binding ResultCommand}"/>
+            <Button Content="Результат" Command="{Binding ResultCommand}"/>
+            <Button Margin="0 10" Content="На главную">
+                <Button.Command>
+                    <cmd:BackToHomeCommand/>
+                </Button.Command>
+            </Button>
         </StackPanel>
     </Grid>
 </Window>
